# hello-world

./: README.md
python2025 -sycntool/: pyproject.toml  setup.py  sync_tool.py
python2025 -sycntool/sync_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python2025 -sycntool/sync_tool/cli/: controller.py  parser.py
python2025 -sycntool/sync_tool/config/: __init__.py
python2025 -sycntool/sync_tool/core/: sync.py  synchronizer.py
python2025 -sycntool/sync_tool/ui/: gui.py
python2025 -sycntool/sync_tool/utils/: logger.py
python2025 -sycntool/tests/: test_core.py
